--- a/layouts/partials/mastodon.html
+++ b/layouts/partials/mastodon.html
@@ -15,7 +15,7 @@
   </div>
   <noscript>You need JavaScript to view the comments.</noscript>
   <script src="/assets/js/purify.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}/assets/css/article.css" />
+  <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}/myblog/assets/css/article.css" />
   <script type="text/javascript">
     function escapeHtml(unsafe) {
       return unsafe
